--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
+.gitignore
 
 # Celery stuff
 celerybeat-schedule
